[gd_scene load_steps=12 format=2]

[ext_resource path="res://worlds/worldSelect/objects/worldSelect/worldSelect.gd" type="Script" id=1]
[ext_resource path="res://worlds/worldSelect/objects/worldSelect/worldSelect.png" type="Texture" id=2]
[ext_resource path="res://entities/classes/interactComponent/interactBallon.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://gameplay/MENU/saveslot/panel.png" type="Texture" id=5]
[ext_resource path="res://entities/player/HUD/sprites/closeButton.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 48 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 128, 0, 128, 128 )
margin_left = 16.0
margin_right = 16.0
margin_top = 16.0
margin_bottom = 16.0
expand_margin_left = 16.0
expand_margin_right = 16.0
expand_margin_top = 16.0
expand_margin_bottom = 8.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 24, 27 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 24, 27 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 24, 0, 24, 27 )

[node name="worldSelect" type="Area2D"]
collision_layer = 1024
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -48 )
shape = SubResource( 1 )

[node name="WorldSelect" type="Sprite" parent="."]
position = Vector2( 0, -28 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 2

[node name="interactBallon" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -56 )
areaInteractPath = NodePath("..")
content = [ "/btn:interact" ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="background" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.611765 )

[node name="margin" type="MarginContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 128
custom_constants/margin_top = 160
custom_constants/margin_left = 128
custom_constants/margin_bottom = 160

[node name="panel" type="PanelContainer" parent="CanvasLayer/Control/margin"]
margin_left = 128.0
margin_top = 160.0
margin_right = 1233.0
margin_bottom = 576.0
custom_styles/panel = SubResource( 2 )

[node name="list" type="HBoxContainer" parent="CanvasLayer/Control/margin/panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1089.0
margin_bottom = 400.0
custom_constants/separation = 32
alignment = 1

[node name="caveWorld" type="TextureButton" parent="CanvasLayer/Control/margin/panel/list"]
margin_left = 472.0
margin_top = 128.0
margin_right = 600.0
margin_bottom = 256.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource( 4 )
expand = true

[node name="close" type="TextureButton" parent="CanvasLayer/Control/margin"]
margin_left = 1185.0
margin_top = 160.0
margin_right = 1233.0
margin_bottom = 214.0
rect_min_size = Vector2( 48, 54 )
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 4 )
texture_hover = SubResource( 5 )
texture_disabled = SubResource( 3 )
expand = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="entered" from="interactBallon" to="." method="_on_interactBallon_entered"]
[connection signal="exitered" from="interactBallon" to="." method="_on_interactBallon_exitered"]
[connection signal="interacted" from="interactBallon" to="." method="_on_interactBallon_interacted"]
[connection signal="pressed" from="CanvasLayer/Control/margin/close" to="." method="_on_close_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
